front page template completed

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,4 +24,9 @@ html
                 a(href='/services') Services
               li(class=title=='Contact' ? 'active' : undefined)
                 a(href='/contact') Contact
+  .container
     block content
+
+  hr
+  footer
+    p PC Repair &copy; 2017
